--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.24",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-popover": "^1.0.6",
@@ -23,7 +24,7 @@
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.10",
     "lucide-react": "^0.261.0",
-    "next": "13.4.10",
+    "next": "^13.5.4",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.26",
     "react": "18.2.0",
